[package]
name = "ohos-json-bignumber"
version = "1.0.0-rc.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0", default-features = false, features = ["napi8"] }
napi-derive-ohos = "1.0"
bigdecimal = "0.4"
mimalloc = "0.1"
widestring = "1.2"

[build-dependencies]
napi-build-ohos = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
